erDiagram

    USERS {
        UUID user_id PK
        VARCHAR username
        VARCHAR email
        VARCHAR password_hash
        BOOLEAN is_active
        TIMESTAMP created_at
    }

    ROLES {
        UUID role_id PK
        VARCHAR role_name
        TEXT description
    }

    USER_ROLES {
        UUID user_id FK
        UUID role_id FK
        TIMESTAMP assigned_at
    }

    DEPARTMENTS {
        UUID department_id PK
        VARCHAR name
        VARCHAR faculty
        TEXT description
    }

    LECTURERS {
        UUID lecturer_id PK
        VARCHAR full_name
        VARCHAR academic_title
        VARCHAR email
        VARCHAR phone
        UUID department_id FK
        UUID user_id FK
    }

    SEMESTERS {
        UUID semester_id PK
        VARCHAR name
        DATE start_date
        DATE end_date
    }

    PHASES {
        UUID phase_id PK
        VARCHAR name
        UUID semester_id FK
        DATE start_date
        DATE end_date
    }

    PHASE_TYPES {
        UUID phase_type_id PK
        VARCHAR name
        TEXT description
    }

    PHASE_PHASE_TYPE {
        UUID phase_id FK
        UUID phase_type_id FK
    }

    CRITERIA {
        UUID criteria_id PK
        UUID phase_type_id FK
        TEXT description
        REAL weight
    }

    TOPIC_EMBEDDINGS {
        UUID embedding_id PK
        JSON vector
        TIMESTAMP created_at
    }

    TOPICS {
        UUID topic_id PK
        TEXT title
        TEXT description
        UUID semester_id FK
        UUID embedding_id FK
        TIMESTAMP created_at
    }

    TOPIC_VERSIONS {
        UUID version_id PK
        UUID topic_id FK
        VARCHAR version_code
        TEXT summary
        TIMESTAMP created_at
    }

    AI_DETECTIONS {
        UUID detection_id PK
        UUID topic_version_id FK
        VARCHAR detection_type
        JSONB result
        REAL confidence
        TIMESTAMP detected_at
    }

    TOPIC_LECTURERS {
        UUID topic_id FK
        UUID lecturer_id FK
        VARCHAR role
        TIMESTAMP assigned_at
    }

    REVIEWS {
        UUID review_id PK
        UUID topic_version_id FK
        UUID phase_type_id FK
        TIMESTAMP created_at
    }

    REVIEW_LECTURERS {
        UUID review_id FK
        UUID lecturer_id FK
    }

    TECHNOLOGIES {
        UUID technology_id PK
        VARCHAR name
    }

    TOPIC_TECHNOLOGY {
        UUID topic_id FK
        UUID technology_id FK
    }

    DOMAINS {
        UUID domain_id PK
        VARCHAR name
    }

    TOPIC_DOMAIN {
        UUID topic_id FK
        UUID domain_id FK
    }

    TOPIC_CATEGORIES {
        UUID category_id PK
        VARCHAR name
    }

    TOPIC_TOPIC_CATEGORY {
        UUID topic_id FK
        UUID category_id FK
    }

    APPLICATION_TYPES {
        UUID application_type_id PK
        VARCHAR name
    }

    TOPIC_APPLICATION_TYPE {
        UUID topic_id FK
        UUID application_type_id FK
    }

    %% ======================= RELATIONSHIPS =======================

    USERS ||--o{ USER_ROLES : has
    ROLES ||--o{ USER_ROLES : assigned
    USERS ||--|| LECTURERS : "is"
    DEPARTMENTS ||--o{ LECTURERS : contains

    SEMESTERS ||--o{ PHASES : has
    SEMESTERS ||--o{ TOPICS : has
    PHASES ||--o{ PHASE_PHASE_TYPE : maps
    PHASE_TYPES ||--o{ PHASE_PHASE_TYPE : links
    PHASE_TYPES ||--o{ CRITERIA : defines

    TOPICS ||--|| TOPIC_EMBEDDINGS : embeds
    TOPICS ||--o{ TOPIC_VERSIONS : versioned
    TOPIC_VERSIONS ||--o{ AI_DETECTIONS : analyzed_by

    TOPICS ||--o{ TOPIC_LECTURERS : guided_by
    LECTURERS ||--o{ TOPIC_LECTURERS : guides

    TOPIC_VERSIONS ||--o{ REVIEWS : reviewed
    REVIEWS ||--o{ REVIEW_LECTURERS : done_by
    LECTURERS ||--o{ REVIEW_LECTURERS : evaluates

    TOPICS ||--o{ TOPIC_TECHNOLOGY : uses
    TECHNOLOGIES ||--o{ TOPIC_TECHNOLOGY : applied_to

    TOPICS ||--o{ TOPIC_DOMAIN : belongs_to
    DOMAINS ||--o{ TOPIC_DOMAIN : includes

    TOPICS ||--o{ TOPIC_TOPIC_CATEGORY : categorized
    TOPIC_CATEGORIES ||--o{ TOPIC_TOPIC_CATEGORY : includes

    TOPICS ||--o{ TOPIC_APPLICATION_TYPE : associated_with
    APPLICATION_TYPES ||--o{ TOPIC_APPLICATION_TYPE : used_by
